--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dexie": "^4.0.11",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.536.0",
+    "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
