--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,14 @@ dist
 dist-ssr
 *.local
 
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Docker volumes (local data)
+postgres_data
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
