feat: Implement comprehensive Branch Management feature (Phases 1-3)
- Phase 1: Core CRUD functionality
  - BranchManagementPage with split-panel layout
  - BranchTable with inline editing, delete, search
  - BranchCreateForm with duplicate checking, validation
  - Backend CRUD endpoints with owner-only access
  - Role-based navigation and routing

- Phase 2: Enhanced features
  - CSV import with drag-drop, validation, error reporting
  - Batch operations (multi-select, bulk delete)
  - Advanced fields (location, contact info) with expandable UI
  - Type filtering with multi-select chips
  - Pagination (25 items per page)
  - Backend CSV import and batch endpoints

- Phase 3: Polish & optimization
  - Skeleton loading screens
  - Keyboard shortcuts (Ctrl+N, Esc, ?)
  - Tooltips and contextual help
  - Error boundary component
  - Debounced search (300ms)
  - React.memo optimization
  - ARIA labels and accessibility improvements

Backend changes:
- BranchController: 8 endpoints (list, get, create, update, delete, check-duplicate, import, batch)
- BranchService: Business logic with tenant isolation
- BranchRepository: Enhanced CRUD with parameterized queries

Frontend changes:
- 4 new components (Page, Table, Form, ImportModal, ErrorBoundary)
- Updated Sidebar and App.tsx routing
- Installed dependencies: zod, papaparse, csv-parser

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,15 @@
     "smoke": "node scripts/smokeTests.js"
   },
   "dependencies": {
+    "@types/papaparse": "^5.5.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
+    "papaparse": "^5.5.3",
     "pg": "^8.11.3",
     "uuid": "^13.0.0"
   },
