--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^7.7.1",
     "vite-plugin-pwa": "^1.0.2",
     "workbox-window": "^7.3.0",
+    "zod": "^4.2.1",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
